  but must be explicitly selected (and libstdc++ must be installed in order
  to use it).

- wxPGProperty ctors are not longer public since this class is intended to be
  a base class and should not be instantiated directly.

- wxIntProperty::DoValidation() and wxFloatProperty::DoValidation() are
  no longer public since they are helpers intended for internal use only.


3.1.4: (released ????-??-??)
----------------------------

NOTE: This file is updated only before the release, please use

    $ git log --notes=changelog --format='%N' v3.1.3..|grep .

      to see all the change log entries since the last release and use

    $ git notes --ref=changelog add -m 'wxPort: description.' to update it.


3.1.3: (released 2019-10-28)
----------------------------

INCOMPATIBLE CHANGES SINCE 3.1.2:

- New wxTranslations::GetAcceptableTranslations() method was problematic and
  was removed, fixing various regressions in wxTranslations::AddCatalog() that
  were introduced by it. Thanks to Tomasz Słodkowicz and Dummy for reporting
  this and providing fixes for it.


All:

- Add C++20-style wxString::starts_with()/ends_with() functions (Lauri Nurmi).
- Add Croation translations (Milo Ivir).
- Add wxRegEx::QuoteMeta() (Tomay).
- Fix MIME type for wxFSFile obtained from wxHTTP.
- Support nullptr in wxPrintf() etc.
- Allow specifying optional libs in WX_CONFIG_CHECK (Juha Sointusalo).

All (GUI):

- Add support for freezing columns and/or rows in wxGrid (Lucian Rotariu)
- Fix wxInfoBar close button size in high DPI (Stefan Ziegler).
- Make disabling the window before creating it actually work.
- Implement wxAuiNotebook::GetBestSize() (Sebastian Walderich).
- Add support for editing dates (without time) to wxGrid (Pavel Kalugin).
- Allow changing tooltip text for button allowing to enter a new string
  in wxPGArrayEditorDialog.
- Fix wxPropertyGrid issues with horizontal scrolling.
- Add wxPG_DIALOG_TITLE wxPGProperty attribute.